--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@
 .btn {
   @apply px-3 p-2 text-sm font-medium;
 }
+
+.center {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
